gobmkida/c1/init_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/init_influence/src/engine/influence.c:780:6: error: use of undeclared identifier 'dword_489FC8'
v6 = dword_489FC8[escape_influence.is_territorial_influence == 0]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/init_influence/src/engine/influence.c:785:6: error: use of undeclared identifier 'dword_489FC0'
v6 = dword_489FC0[q->is_territorial_influence == 0]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/init_influence/src/obj/1/influence.o] Error 1
